--- a/README
+++ b/README
@@ -18,4 +18,7 @@ My objectives:
 
 My implmentation is directly from the paper, with no working code as a example.
 
-The Paper can be found in this Reposotory.
+Resources
+
+Paper: infoscience.epfl.ch/record/169879/files/RMTrees.pdf?version=1
+Video by the Author: http://blip.tv/clojure/phill-bagwell-striving-to-make-things-simple-and-fast-5936145
